--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,6 +64,9 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+section {
+  margin-top: 130px;
+}
 .about {
   margin-top: 130px;
   background: #fff8f3;
@@ -72,6 +75,7 @@ main {
   text-align: center;
 }
 .section-title {
+  text-align: center;
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 35px;
@@ -93,4 +97,24 @@ main {
   color: #474747;
   font-weight: 700;
   font-size: 20px;
+}
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill-title {
+  font-weight: 700;
+  font-size: 20px;
+  color: #181818;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-desc {
+  color: #757575;
+}
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
 }
