--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -118,3 +118,31 @@ section {
   border-radius: 5px;
   padding: 30px;
 }
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+
+.resume .title {
+  color: #757575;
+  font-weight: 700;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+.resume .sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.resume .desc {
+  color: #757575;
+}
+.resume-item {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.resume-button {
+  margin-top: 50px;
+  text-align: center;
+}
